fixed low contrast on selected checkbox labels

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ input[type="checkbox"] {
 }
 input[type="checkbox"]:checked+label {
   transition: 0s;
+  color: var(--background-main);
   background: var(--text-accent-secondary);
   border-color: var(--text-accent-secondary);
 }
